--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,9 @@ frontend:
   phases:
     preBuild:
       commands:
+        - nvm install 22.13.0
+        - nvm use 22.13.0
+        - node -v
         - npm ci
     build:
       commands:
@@ -15,5 +18,6 @@ frontend:
     paths:
       - node_modules/**/*
       - .next/cache/**/*
+
 
 
