--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "riverpaws",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "22.13.0",
+    "npm": "11.0.0"
+  },
   "scripts": {
     "process-images": "node scripts/process-images.js",
     "optimize-images": "node scripts/optimize-images.js",
     "dev": "next dev",
     "build": "node scripts/update-cache-version.js --sync && next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src",
     "test:redirects": "node scripts/test-redirects.js",
     "sync-cache": "node scripts/update-cache-version.js --sync",
     "update-cache": "node scripts/update-cache-version.js"
