--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - nvm install 22.13.0
-        - nvm use 22.13.0
-        - node -v
-        - npm ci
+        - npm ci --cache .npm --prefer-offline
     build:
       commands:
         - npm run build
@@ -16,8 +13,28 @@ frontend:
       - '**/*'
   cache:
     paths:
+      - .npm/**/*
       - node_modules/**/*
       - .next/cache/**/*
 
-
-
+customHeaders:
+  - pattern: 'sw.js'
+    headers:
+      - key: Cache-Control
+        value: 'no-cache, no-store, must-revalidate'
+      - key: Content-Type
+        value: 'application/javascript; charset=utf-8'
+      - key: Service-Worker-Allowed
+        value: '/'
+  - pattern: '**/*.js'
+    headers:
+      - key: Content-Type
+        value: 'application/javascript'
+  - pattern: '_next/static/**/*'
+    headers:
+      - key: Cache-Control
+        value: 'public, max-age=31536000, immutable'
+  - pattern: 'manifest.json'
+    headers:
+      - key: Content-Type
+        value: 'application/manifest+json'
